--- a/index.html
+++ b/index.html
@@ -5,16 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="assets/icons/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
     <title>Beauty Salon</title>
 </head>
 <body>
     <header id="header">
-        <nav class="container">
+        <nav class="container show">
             <a class="logo" href="#">beauty<span>salon</span>.</a>
-            <div>...</div>
+            <div class="menu">
+                <ul class="grid">
+                    <li><a class="title" href="#home">Início</a></li>
+                    <li><a class="title" href="#about">Sobre</a></li>
+                    <li><a class="title" href="#services">Serviços</a></li>
+                    <li><a class="title" href="#testimonials">Depoimentos</a></li>
+                    <li><a class="title" href="#contact">Contato</a></li>
+                </ul>
+            </div>
+            <div class="toggle icon-menu"></div>
+            <div class="toggle icon-close"></div>
         </nav>
     </header>
     <main>
@@ -24,15 +36,32 @@
                     <img src="assets/images/beauty1.png" alt="Homem de boné apreciando a vista">
                 </div>
                 <div class="text">
-                    <h1>Saúde natural para os seus cabelos</h1>
+                    <h2 class="title">Saúde natural para os seus cabelos</h2>
                     <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
                     <a href="#" class="button">Agendar um horário</a>
                 </div>
             </div>
         </section>
         <div class="divider-1"></div>
-        <section class="section">
-            
+        <section class="section" id="about">
+            <div class="container grid">
+                About
+            </div>
+        </section>
+        <section class="section" id="services">
+            <div class="container grid">
+                Services
+            </div>
+        </section>
+        <section class="section" id="testimonials">
+            <div class="container grid">
+                Testimonials
+            </div>
+        </section>
+        <section class="section" id="contact">
+            <div class="container grid">
+                Contact
+            </div>
         </section>
     </main>
 
