--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="assets/icons/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-
     <title>Beauty Salon</title>
 </head>
 <body>
@@ -82,17 +82,75 @@
                 </div>
             </div>
         </section>
+        <div class="divider-1"></div>
         <section class="section" id="testimonials">
-            <div class="container grid">
-                Testimonials
+            <div class="container">
+                <header>
+                    <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+                </header>
+                <div class="testimonials swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="testimonial swiper-slide">
+                            <blockquote>
+                                <p>
+                                    <span>&ldquo;</span>
+                                    Eu sou cliente do Beautysalon há 5 anos e não troco por nada! Certamente meu cabelo mudou muito depois que comecei a tratar somente com produtos naturais e veganos. São profissionais incríveis e qualificados.
+                                </p>
+                                <cite>
+                                    <img src="https://randomuser.me/api/portraits/women/28.jpg" alt="Wanessa Souza">
+                                    Wanessa Souza
+                                </cite>
+                            </blockquote>
+                        </div>
+                        <div class="testimonial swiper-slide">
+                            <blockquote>
+                                <p>
+                                    <span>&ldquo;</span>
+                                    Minha mãe frequenta o salão há anos e me levou um dia para conhecer. Minha experiência foi incrível, eu continuo fazendo o a terapia capilar e isso salvou o meu cabelo. Adoro todos os profissionais do Beautysalon.
+                                </p>
+                                <cite>
+                                    <img src="https://randomuser.me/api/portraits/women/79.jpg" alt="Luna Falcão">
+                                    Luna Falcão
+                                </cite>
+                            </blockquote>
+                        </div>
+                        <div class="testimonial swiper-slide">
+                            <blockquote>
+                                <p>
+                                    <span>&ldquo;</span>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe modi odio rerum quo ab dolorum quibusdam nostrum. Nemo, laboriosam nostrum voluptatibus velit dolore odio quisquam debitis corporis error, repellat.
+                                </p>
+                                <cite>
+                                    <img src="assets/images/balle.jpg" alt="Ballerini">
+                                    Ballerini
+                                </cite>
+                            </blockquote>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </section>
+        <div class="divider-2"></div>
         <section class="section" id="contact">
             <div class="container grid">
-                Contact
+                <div class="text">
+                    <h2 class="title">Entre em contato com a gente</h2>
+                    <p>Entre em contato com a Beautysalon, queremos tirar suas dúvidas, ouvir suas críticas e sugestões.</p>
+                    <a href="https://api.whatsapp.com/send?phone=+5511998456754&text=Olá, gostaria de agendar um horário" target="_blank" class="button"><i class="icon-whatsapp"></i>Entrar em contato</a>
+                </div>
+                <div class="links">
+                    <ul class="grid">
+                        <li><i class="icon-phone1"></i>11 99845-6754</li>
+                        <li><i class="icon-map-pin"></i>R. Amauri Souza, 346</li>
+                        <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
