--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="text">
                     <h2 class="title">Saúde natural para os seus cabelos</h2>
                     <p>Um salão exclusivo em São Paulo, especializado em tratamentos naturais.</p>
-                    <a href="#" class="button">Agendar um horário</a>
+                    <a href="#contact" class="button">Agendar um horário</a>
                 </div>
             </div>
         </section>
